@startuml

abstract class LiveDocument {
    +void addPropertyChangeCallback(PropertyChangeCallback)
    +void removePropertyChangeCallback(PropertyChangeCallback)
    +void clearPropertyChangeCallbacks()

    +void addLifetimeChangeCallback(LifetimeChangeCallback)
    +void removeLifetimeChangeCallback(LifetimeChangeCallback)
    +void clearLifetimeChangeCallbacks()

    +String getId()
    +boolean isAlive()

    +void delete()
}

class Occurrence {
    +<<get/set>> boolean onSunday
    +<<get/set>> boolean onMonday
    +<<get/set>> boolean onTuesday
    +<<get/set>> boolean onWednesday
    +<<get/set>> boolean onThursday
    +<<get/set>> boolean onFriday
    +<<get/set>> boolean onSaturday
}

class Event {
    +<<get/set>> Date date
    +<<get/set>> String comment
    +<<get/set>> String photoPath
    +<<get/set>> Location location
}

class Habit {
    +<<get/set>> Boolean shared
    +<<get/set>> String title
    +<<get/set>> String reason
    +<<get/set>> Date startDate
    +<<get/set>> Occurrence occurrence
    +<<get/set>> List<String> events
}

class User {
    +<<get/set>> String userId
    +<<get/set>> List<String> habits
}

LiveDocument <|-- Habit
LiveDocument <|-- Event
LiveDocument <|-- User

User "1" *- "0..*" Habit : \t
Habit "1" *- "0..*" Event : \t

Habit "1" *-- "1" Occurrence

@enduml